--- a/Project.ipynb
+++ b/Project.ipynb
@@ -32,8 +32,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.229235Z",
-     "start_time": "2024-11-29T10:22:14.226732Z"
+     "end_time": "2024-11-29T11:33:55.169604Z",
+     "start_time": "2024-11-29T11:33:55.167403Z"
     }
    },
    "cell_type": "code",
@@ -47,7 +47,7 @@
    ],
    "id": "e7345ac4c349ce36",
    "outputs": [],
-   "execution_count": 97
+   "execution_count": 126
   },
   {
    "metadata": {},
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.282933Z",
-     "start_time": "2024-11-29T10:22:14.235379Z"
+     "end_time": "2024-11-29T11:33:55.223090Z",
+     "start_time": "2024-11-29T11:33:55.174747Z"
     }
    },
    "cell_type": "code",
@@ -118,7 +118,7 @@
    ],
    "id": "f3fdc0d7b157bc90",
    "outputs": [],
-   "execution_count": 98
+   "execution_count": 127
   },
   {
    "metadata": {},
@@ -129,8 +129,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.324785Z",
-     "start_time": "2024-11-29T10:22:14.323324Z"
+     "end_time": "2024-11-29T11:33:55.280949Z",
+     "start_time": "2024-11-29T11:33:55.278870Z"
     }
    },
    "cell_type": "code",
@@ -151,7 +151,7 @@
    ],
    "id": "d039a8b50c7b8c5f",
    "outputs": [],
-   "execution_count": 99
+   "execution_count": 128
   },
   {
    "metadata": {},
@@ -162,8 +162,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.364625Z",
-     "start_time": "2024-11-29T10:22:14.363123Z"
+     "end_time": "2024-11-29T11:33:55.336176Z",
+     "start_time": "2024-11-29T11:33:55.334565Z"
     }
    },
    "cell_type": "code",
@@ -183,7 +183,7 @@
    ],
    "id": "87c96e24a1f91e01",
    "outputs": [],
-   "execution_count": 100
+   "execution_count": 129
   },
   {
    "metadata": {},
@@ -194,8 +194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.405147Z",
-     "start_time": "2024-11-29T10:22:14.403322Z"
+     "end_time": "2024-11-29T11:33:55.391260Z",
+     "start_time": "2024-11-29T11:33:55.389197Z"
     }
    },
    "cell_type": "code",
@@ -232,7 +232,7 @@
    ],
    "id": "1af116a0148278c0",
    "outputs": [],
-   "execution_count": 101
+   "execution_count": 130
   },
   {
    "metadata": {},
@@ -243,8 +243,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:48:19.421278Z",
-     "start_time": "2024-11-29T10:48:19.403511Z"
+     "end_time": "2024-11-29T11:33:55.513931Z",
+     "start_time": "2024-11-29T11:33:55.446053Z"
     }
    },
    "cell_type": "code",
@@ -304,13 +304,13 @@
      ]
     }
    ],
-   "execution_count": 119
+   "execution_count": 131
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.487803Z",
-     "start_time": "2024-11-29T08:24:40.312336Z"
+     "end_time": "2024-11-29T11:33:55.608606Z",
+     "start_time": "2024-11-29T11:33:55.604976Z"
     }
    },
    "cell_type": "code",
@@ -328,7 +328,7 @@
    ],
    "id": "1074f5c2f2db0662",
    "outputs": [],
-   "execution_count": 80
+   "execution_count": 132
   },
   {
    "metadata": {},
@@ -339,19 +339,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T11:04:17.232191Z",
-     "start_time": "2024-11-29T11:04:09.546076Z"
+     "end_time": "2024-11-29T11:33:55.809325Z",
+     "start_time": "2024-11-29T11:33:55.705579Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "train_data = selected_dataset_train\n",
     "# Step 1: Create target labels indicating engine swap (1: needs swapping, 0: does not need swapping)\n",
-    "threshold = 10  # Define the threshold for remaining cycles\n",
+    "threshold = 5  # Define the threshold for remaining cycles\n",
     "train_data['RUL'] = train_data.groupby('id')['cycle'].transform(max) - train_data['cycle']\n",
     "train_data['Y'] = (train_data['RUL'] <= threshold).astype(int)\n",
     "\n",
@@ -378,40 +379,104 @@
     "# Print results\n",
     "print(\"Classification Report:\\n\", classification_report_result)\n",
     "print(\"ROC-AUC Score:\", roc_auc)\n",
-    "print(\"Mean Cross-Validation AUC:\", cv_scores.mean())"
+    "print(\"Mean Cross-Validation AUC:\", cv_scores.mean())\n",
+    "\n",
+    "# Generate the confusion matrix\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Extract TP, FP, FN, TN from the confusion matrix\n",
+    "TN, FP, FN, TP = conf_matrix.ravel()\n",
+    "\n",
+    "# Print the results\n",
+    "print(f\"True Positives (TP): {TP}\")\n",
+    "print(f\"False Positives (FP): {FP}\")\n",
+    "print(f\"True Negatives (TN): {TN}\")\n",
+    "print(f\"False Negatives (FN): {FN}\")\n",
+    "\n",
+    "# Optionally, display the confusion matrix for better visualization\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(conf_matrix)"
    ],
    "id": "922e7c5bcbb8ce4b",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.99      0.99      0.99      3918\n",
-      "           1       0.87      0.82      0.84       209\n",
-      "\n",
-      "    accuracy                           0.98      4127\n",
-      "   macro avg       0.93      0.91      0.92      4127\n",
-      "weighted avg       0.98      0.98      0.98      4127\n",
-      "\n",
-      "ROC-AUC Score: 0.9958075963959738\n",
-      "Mean Cross-Validation AUC: 0.9929789733679174\n"
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [20631, 16504]",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[133], line 19\u001B[0m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;66;03m# Step 4: Random Forest Classifier with Cross-Validation\u001B[39;00m\n\u001B[1;32m     18\u001B[0m rf \u001B[38;5;241m=\u001B[39m RandomForestClassifier(random_state\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m42\u001B[39m, n_estimators\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m100\u001B[39m)\n\u001B[0;32m---> 19\u001B[0m cv_scores \u001B[38;5;241m=\u001B[39m \u001B[43mcross_val_score\u001B[49m\u001B[43m(\u001B[49m\u001B[43mrf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mX_train\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my_train\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcv\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m5\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mscoring\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mroc_auc\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m     21\u001B[0m \u001B[38;5;66;03m# Fit the model\u001B[39;00m\n\u001B[1;32m     22\u001B[0m rf\u001B[38;5;241m.\u001B[39mfit(X_train, y_train)\n",
+      "File \u001B[0;32m/opt/miniconda3/envs/Project/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:562\u001B[0m, in \u001B[0;36mcross_val_score\u001B[0;34m(estimator, X, y, groups, scoring, cv, n_jobs, verbose, fit_params, pre_dispatch, error_score)\u001B[0m\n\u001B[1;32m    559\u001B[0m \u001B[38;5;66;03m# To ensure multimetric format is not supported\u001B[39;00m\n\u001B[1;32m    560\u001B[0m scorer \u001B[38;5;241m=\u001B[39m check_scoring(estimator, scoring\u001B[38;5;241m=\u001B[39mscoring)\n\u001B[0;32m--> 562\u001B[0m cv_results \u001B[38;5;241m=\u001B[39m \u001B[43mcross_validate\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    563\u001B[0m \u001B[43m    \u001B[49m\u001B[43mestimator\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mestimator\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    564\u001B[0m \u001B[43m    \u001B[49m\u001B[43mX\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    565\u001B[0m \u001B[43m    \u001B[49m\u001B[43my\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43my\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    566\u001B[0m \u001B[43m    \u001B[49m\u001B[43mgroups\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mgroups\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    567\u001B[0m \u001B[43m    \u001B[49m\u001B[43mscoring\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mscore\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43mscorer\u001B[49m\u001B[43m}\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    568\u001B[0m \u001B[43m    \u001B[49m\u001B[43mcv\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcv\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    569\u001B[0m \u001B[43m    \u001B[49m\u001B[43mn_jobs\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mn_jobs\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    570\u001B[0m \u001B[43m    \u001B[49m\u001B[43mverbose\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mverbose\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    571\u001B[0m \u001B[43m    \u001B[49m\u001B[43mfit_params\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfit_params\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    572\u001B[0m \u001B[43m    \u001B[49m\u001B[43mpre_dispatch\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mpre_dispatch\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    573\u001B[0m \u001B[43m    \u001B[49m\u001B[43merror_score\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43merror_score\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    574\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    575\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m cv_results[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtest_score\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
+      "File \u001B[0;32m/opt/miniconda3/envs/Project/lib/python3.8/site-packages/sklearn/utils/_param_validation.py:211\u001B[0m, in \u001B[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    205\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    206\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m config_context(\n\u001B[1;32m    207\u001B[0m         skip_parameter_validation\u001B[38;5;241m=\u001B[39m(\n\u001B[1;32m    208\u001B[0m             prefer_skip_nested_validation \u001B[38;5;129;01mor\u001B[39;00m global_skip_validation\n\u001B[1;32m    209\u001B[0m         )\n\u001B[1;32m    210\u001B[0m     ):\n\u001B[0;32m--> 211\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    212\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m InvalidParameterError \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[1;32m    213\u001B[0m     \u001B[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001B[39;00m\n\u001B[1;32m    214\u001B[0m     \u001B[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001B[39;00m\n\u001B[1;32m    215\u001B[0m     \u001B[38;5;66;03m# the name of the estimator by the name of the function in the error\u001B[39;00m\n\u001B[1;32m    216\u001B[0m     \u001B[38;5;66;03m# message to avoid confusion.\u001B[39;00m\n\u001B[1;32m    217\u001B[0m     msg \u001B[38;5;241m=\u001B[39m re\u001B[38;5;241m.\u001B[39msub(\n\u001B[1;32m    218\u001B[0m         \u001B[38;5;124mr\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mparameter of \u001B[39m\u001B[38;5;124m\\\u001B[39m\u001B[38;5;124mw+ must be\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m    219\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mparameter of \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfunc\u001B[38;5;241m.\u001B[39m\u001B[38;5;18m__qualname__\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m must be\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m    220\u001B[0m         \u001B[38;5;28mstr\u001B[39m(e),\n\u001B[1;32m    221\u001B[0m     )\n",
+      "File \u001B[0;32m/opt/miniconda3/envs/Project/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:290\u001B[0m, in \u001B[0;36mcross_validate\u001B[0;34m(estimator, X, y, groups, scoring, cv, n_jobs, verbose, fit_params, pre_dispatch, return_train_score, return_estimator, return_indices, error_score)\u001B[0m\n\u001B[1;32m     55\u001B[0m \u001B[38;5;129m@validate_params\u001B[39m(\n\u001B[1;32m     56\u001B[0m     {\n\u001B[1;32m     57\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mestimator\u001B[39m\u001B[38;5;124m\"\u001B[39m: [HasMethods(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfit\u001B[39m\u001B[38;5;124m\"\u001B[39m)],\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     96\u001B[0m     error_score\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39mnan,\n\u001B[1;32m     97\u001B[0m ):\n\u001B[1;32m     98\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"Evaluate metric(s) by cross-validation and also record fit/score times.\u001B[39;00m\n\u001B[1;32m     99\u001B[0m \n\u001B[1;32m    100\u001B[0m \u001B[38;5;124;03m    Read more in the :ref:`User Guide <multimetric_cross_validation>`.\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    288\u001B[0m \u001B[38;5;124;03m    [0.28009951 0.3908844  0.22784907]\u001B[39;00m\n\u001B[1;32m    289\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m--> 290\u001B[0m     X, y, groups \u001B[38;5;241m=\u001B[39m \u001B[43mindexable\u001B[49m\u001B[43m(\u001B[49m\u001B[43mX\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43my\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgroups\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    292\u001B[0m     cv \u001B[38;5;241m=\u001B[39m check_cv(cv, y, classifier\u001B[38;5;241m=\u001B[39mis_classifier(estimator))\n\u001B[1;32m    294\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mcallable\u001B[39m(scoring):\n",
+      "File \u001B[0;32m/opt/miniconda3/envs/Project/lib/python3.8/site-packages/sklearn/utils/validation.py:455\u001B[0m, in \u001B[0;36mindexable\u001B[0;34m(*iterables)\u001B[0m\n\u001B[1;32m    436\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"Make arrays indexable for cross-validation.\u001B[39;00m\n\u001B[1;32m    437\u001B[0m \n\u001B[1;32m    438\u001B[0m \u001B[38;5;124;03mChecks consistent length, passes through None, and ensures that everything\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m    451\u001B[0m \u001B[38;5;124;03m    sparse matrix, or dataframe) or `None`.\u001B[39;00m\n\u001B[1;32m    452\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[1;32m    454\u001B[0m result \u001B[38;5;241m=\u001B[39m [_make_indexable(X) \u001B[38;5;28;01mfor\u001B[39;00m X \u001B[38;5;129;01min\u001B[39;00m iterables]\n\u001B[0;32m--> 455\u001B[0m \u001B[43mcheck_consistent_length\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mresult\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    456\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m result\n",
+      "File \u001B[0;32m/opt/miniconda3/envs/Project/lib/python3.8/site-packages/sklearn/utils/validation.py:409\u001B[0m, in \u001B[0;36mcheck_consistent_length\u001B[0;34m(*arrays)\u001B[0m\n\u001B[1;32m    407\u001B[0m uniques \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39munique(lengths)\n\u001B[1;32m    408\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(uniques) \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[0;32m--> 409\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m    410\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFound input variables with inconsistent numbers of samples: \u001B[39m\u001B[38;5;132;01m%r\u001B[39;00m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    411\u001B[0m         \u001B[38;5;241m%\u001B[39m [\u001B[38;5;28mint\u001B[39m(l) \u001B[38;5;28;01mfor\u001B[39;00m l \u001B[38;5;129;01min\u001B[39;00m lengths]\n\u001B[1;32m    412\u001B[0m     )\n",
+      "\u001B[0;31mValueError\u001B[0m: Found input variables with inconsistent numbers of samples: [20631, 16504]"
      ]
     }
    ],
-   "execution_count": 122
+   "execution_count": 133
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Neural Networks",
+   "id": "4a533d3e6d2ea2f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:22:14.487977Z",
+     "end_time": "2024-11-29T11:33:55.873322Z",
      "start_time": "2024-11-29T08:24:40.445075Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "\n",
+    "# Step 1: Scale the Features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Step 2: Build the Neural Network\n",
+    "model = Sequential([\n",
+    "    Dense(64, activation='relu', input_dim=X_train_scaled.shape[1]),\n",
+    "    Dropout(0.3),  # Add dropout for regularization\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dropout(0.3),\n",
+    "    Dense(1, activation='sigmoid')  # Output layer with sigmoid for binary classification\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "# Step 3: Train the Model\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
+    "\n",
+    "history = model.fit(\n",
+    "    X_train_scaled, y_train,\n",
+    "    validation_split=0.2,\n",
+    "    epochs=100,\n",
+    "    batch_size=32,\n",
+    "    callbacks=[early_stopping],\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "# Step 4: Evaluate the Model\n",
+    "y_pred_proba_nn = model.predict(X_test_scaled)\n",
+    "y_pred_nn = (y_pred_proba_nn > 0.5).astype(int)\n",
+    "\n",
+    "# Performance Metrics\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_nn))\n",
+    "print(\"ROC-AUC Score:\", roc_auc_score(y_test, y_pred_proba_nn))"
+   ],
    "id": "a14d8611532717bc",
    "outputs": [],
    "execution_count": null
